gitops/apps/shuffle/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shuffle
  labels:
    app.kubernetes.io/name: shuffle
    app.kubernetes.io/part-of: platform-gitops
